turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:27: error: Unit does not take parameters
	ligne()
             ^